# Tikray

./: .gitignore  LICENSE  MANIFEST.in  README.md  airflow_dag_example.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
hanapacha/: __init__.py  cli.py
hanapacha/commands/: docker_down_command.py  docker_up_command.py  wait_for_complete_command.py
hanapacha/config/: settings.py
hanapacha/drive/: drive_repository.py  drive_service.py
hanapacha/processors/: config_env_generator.py  dump_metadata.py  zip_processor.py
hanapacha/resources/: docker-compose.yml
hanapacha/utils/: docker_resources.py
hanapacha/workflows/: folder_workflow.py
tikray/: __init__.py  cli.py
tikray/commands/: docker_down_command.py  wait_for_complete_command.py
tikray/drive/: drive_service.py
tikray/workflows/: folder_workflow.py
