[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanapacha"
version = "0.1.4"
description = "Automatización para descarga y procesamiento de dumps desde Google Drive para conversión Oracle a MongoDB"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    {name = "Esteban Cossio", email = "estebancogo47@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/C0SS10/hanapacha"
Repository = "https://github.com/C0SS10/hanapacha"
Issues = "https://github.com/C0SS10/hanapacha/issues"

[project.scripts]
hanapacha = "hanapacha.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hanapacha*"]
exclude = ["tests*"]